cache.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cache
  namespace: app 

spec:
  selector:
    matchLabels:
      app: cache
  template:
    metadata:
      labels:
        app: cache
    spec:
      containers:
      - name: cache-multitool
        image: wbitt/network-multitool
        # resources:
        #   limits:
        #     memory: "128Mi"
        #     cpu: "500m"
        ports:
        - containerPort: 82
      - name: cache-nginx
        image: nginx:1.14.2
        # resources:
        #   limits:
        #     memory: "128Mi"
        #     cpu: "500m"
        ports:
        - containerPort: 80
