frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: app 
spec:
  selector:
    app: frontend
  ports:
  - port: 80    
    targetPort: 3452
