def-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-all-ingress
  namespace: app 
spec:
  podSelector: {}
  ingress:
  - {}
  policyTypes:
  - Ingress

---

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-all-egress
  namespace: app
spec:
  podSelector: {}
  egress:
  - {}
  policyTypes:
  - Egress
